# llm-monitor

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yaml  docker-compose.yml
.github/workflows/: api.yml  backend.yml  frontend.yml  ui.yml
api/: Dockerfile  README.md  app.py
api/src/llm_monitor/: discovery.py  discovery_manager.py  endpoints.py  endpoints_cache.py  env_config.py  litellm_client.py  logging_config.py  schema.py  tick_funnel.py
api/src/plugins/: ollama.py
backend/: pyproject.toml
backend/src/llm_monitor/: __init__.py  discovery_manager.py  env_config.py  plugins.py  schema.py
backend/src/plugins/: ollama.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Llmm.vue
frontend/src/configuration/: backend.js
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/src/: App.vue  main.js
ui/src/components/: Llmm.vue
ui/src/router/: index.js
ui/src/views/: ChatView.vue  HomeView.vue
