[project]
name = "llm-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel>=0.0.21",
    "ruff>=0.6.2",
    "pydantic-settings>=2.4.0",
    "streamlit-pydantic",
    "fastapi[standard]>=0.112.2",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "streamlit>=1.37.1",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "streamlit-keycloak>=1.1.1",
    "python-dotenv",
    "loguru",
    "asyncpg",
    "greenlet",
    "alembic",
    "apprise",
    "dbstudio>=0.1.1",
    "python-keycloak",
    "fastapi_keycloak_middleware",
    "discord",
    "aiohttp",
    "prometheus-client>=0.21.0",
    "inflection",
    "jsonpickle",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_monitor"]
